# hrksplat

./: .gitignore  CMakeLists.txt  README-short.md  README.md  hd-parms.h  hrkweb.cfg  splat.cpp  splat.h  std-parms-gen.sh  std-parms.h
tests/azpeitia/: Azpeitia_Xoxote-site_report.txt  Makefile  azpeitia-erlo.qth  azpeitia-etxea.qth  azpeitia-xoxote.lcf  azpeitia-xoxote.qth  splat.lrp
utils/: convert-coordinate  download-from-srtm
